Refactored ReportController and added access restrictons